--- a/New folder/style.css
+++ b/New folder/style.css
@@ -55,22 +55,78 @@ p:hover{
     top: 0;
     font-size: xx-large;
 }
-.inline {
+.inline{
     display: inline-block
 }
-.flex.container{
+.flex-container{
     display: flex;
    /* flex-direction:  row-reverse; */
    justify-content: space-around;
+   align-items: center;
+   background-color: aqua ;
+   height: 100vh;
 }
-.flex.container div{
+.flex-container div{
     background-color: peachpuff;
-    border: 2xp solid brown;
-    height: 100xp;
-    width: 100xp;
+    border: 2px solid brown;
+    height: 100px;
+    width: 100px;
 }
 .item2{
    /* flex-grow: 2; */
     flex-shrink: 0;
 }
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: black;
+    background-color: aqua;
+    border-radius: 30px;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.container{
+    display: flex;
+    gap: 30px;
+}
+  
+.grid-container{
+    display: grid;
+    grid-template-rows: 100px 100px 100px;
+    grid-template-columns: 100px 100px 100px;
+}
+.grid-container div{
+    background-color: plum;
+    border: 2px solid purple;
+}
+.item1{
+    grid-column-start: 1;
+    grid-column-end: 5;
+}
+.item2{
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+.item3{
+    grid-column-start: 4;
+}
+.item4{
+    grid-column-start: 1;
+    grid-column-end: 5;
+}
+@media (max-width:720px){
+    .navbar{
+        display: flex;
+        flex-direction: column;
+    }
+    .container{
+        display: flex;
+        flex-direction: column
+        ;
+    }
+}
     
+}
